# catalyst-buried-volume-scanner

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  build_exe.sh  environment.yaml  environment.yml  mad25_p.xyz  pyproject.toml  requirements-dev.txt  sample.json  setup.py
.github/workflows/: CI.yml  docs.yml  docy.yml
.py2sambvca_old/: py2sambvca_old.txt
docs/: environment-rtd.yml
docs/source/: conf.py  index.rst  modules.rst  molecule_scanner.rst  new_functionality.md  test_file.csv
molecule_scanner/: __init__.py  dash_app.py  launch_molecule_scanner.py  molecule_scanner.py  paths.py  scanner.py
molecule_scanner/executables/: sambvca21.f  sambvca21.x
notebooks/: example_notebook.ipynb
py2sambvca/: py2sambvca.py
py2sambvca_old/: __init__.py  py2sambvca_old.py
source/: conf.py  new_functionality.md
test/: test_molecule_scanner.py
test/data/: GC1.xyz
web_ui/: Untitled.ipynb  dash_app.py  launch_app.py  test.csv  test.py  test2.py  test3.py
